deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metadata-scrubber
  namespace: projet-metadonnees-rmes
  labels:
    app: metadata-scrubber
spec:
  selector: { app: metadata-scrubber }
  ports:
    - port: 80
      targetPort: 8000
